Overhauled error pages, made their implementation more consistent

--- a/proxy/responses/404.html
+++ b/proxy/responses/404.html
@@ -12,10 +12,10 @@
 
     <body>
         <img src="/static/logui/img/logo.svg" alt="LogUI Logo" />
-        <h1>Server Starting Up (HTTP 502)</h1>
+        <h1>Not Found (HTTP 404)</h1>
         <p>
-            <strong>If you've just started the LogUI docker instance, please wait 20-30 seconds for everything to fully start, and refresh this page.</strong>
-            Otherwise, check the output log to see what's going on &mdash; at the moment, we can't communicate with the HTTP server.
+            <strong>LogUI couldn't find the page you are looking for.</strong>
+            Check the path you have provided, and try again.
         </p>
     </body>
     
